--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/stylesheets/index.css">
+    <script src="/client.js" defer></script>
     <title>Document</title>
 </head>
 
 <body>
     <main>
+        <h1>Mars Dashboard</h1>
         <div id="root">
             <h1>Loading...</h1>
         </div>
     </main>
 </body>
-<script src="/client.js"></script>
-
 </html>
