Create tabs and add tabs style

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,11 +11,21 @@
 </head>
 
 <body>
-    <main>
+    <header>
         <h1>Mars Dashboard</h1>
+    </header>
+    <main>
+        <div class="btns-container">
+            <div class="btn active" id="curiosity">curiosity</div>
+            <div class="btn" id="opportunity">opportunity</div>
+            <div class="btn" id="spirit">spirit</div>
+        </div>
         <div id="root">
-            <h1>Loading...</h1>
         </div>
     </main>
+    <footer>
+        <p>Rovers' images are pulled from the offical Nasa API</p>
+    </footer>
 </body>
+
 </html>
