Implement get rover images logic

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -21,6 +21,7 @@
             <div class="btn" id="spirit">spirit</div>
         </div>
         <div id="root">
+            <h1>Loading...</h1>
         </div>
     </main>
     <footer>
